Added Better Exception Handling and User Warning. Also added Javadocs